# integral_compiler

./: .gitignore  Cargo.toml  IR_template.txt  README.md  benchmark.sh  compile_parts.sh  diagnoze.sh  example.c  example.ll  ploter_config.toml  production_config.toml  test_config.toml  tst
numerical_analysys/: aa.txt  plot_compare.py  poly_scale.py  py_venv_reqs.txt  test.py
ploter/: Cargo.toml
ploter/src/: main.rs
production/: Cargo.toml
production/src/: main.rs
prototype/: Cargo.toml  build.rs  linker.ld
prototype/benches/: performance.rs
prototype/src/: lib.rs  main.rs
prototype/src/components/: auxilary_functions.rs  error_types.rs  external_functions.rs  lexem_processor_state_handlers.rs  lexem_processor_taylor.rs  mod.rs  object_type_definitions.rs  polynomial_operators.rs  polynomials.rs  taylor_generation.rs  taylor_optimizer.rs
prototype/src/parts/: error_types.rs  mod.rs  terminal_decoration.rs
prototype/src/stages/: binary_compile.rs  custom_ir_compile.rs  function_lexing.rs  function_parse.rs  function_parse_iterative.rs  function_parse_recursive.rs  ir_compile.rs  linking.rs  mod.rs  polynomial_ops.rs  polynomials.rs  string_to_tree_iterative.rs  string_to_tree_recursive.rs  taylor_generation.rs  taylor_ir_compile.rs
prototype/src/tests/: lexing_and_postfix.rs  parsing_and_postfix.rs  taylor_optimizer.rs  topt_poly_const_x_ops_.rs  topt_poly_from_postfix.rs  topt_static_const_eval.rs  unit_parsing.rs  unit_parsing_postfix.rs  unit_tree.rs
src/: lib.rs  library.rs  main.rs
src/stages/: linking.rs  (+6 more)
time_bench/: Cargo.toml  build.rs
(+4 files in other folders)
