[package]
name = "prototype"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[dependencies]
llvm-sys = "160"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "performance"
harness = false

[lib]
name = "prototype"
path = "src/lib.rs"